# ssprojekat

./: CMakeLists.txt  Makefile  extract_instructions_doc.txt
inc/: assembler.hpp  emulator.hpp  exception.hpp  linker.hpp  section1.hpp  shared.hpp  symbol1.hpp
src/: assembler.cpp  assembler_main.cpp  emulator_main.cpp  linker.cpp  linker_main.cpp  main_emulator.cpp
ss-proj-main/: .gitignore  CMakeLists.txt  README.md  ss-project.code-workspace
ss-proj-main/inc/: assembler1.hpp  binary_record.hpp  cmd_line_parser.hpp  emulator.hpp  emulator1.hpp  file_reader.hpp  file_writer.hpp  instruction.hpp  instruction_executor_factory.hpp  instruction_parser.hpp  linker1.hpp  place.hpp  place_item.hpp  pool_item.hpp  relocation_item.hpp  section.hpp  symbol.hpp  utils.hpp
ss-proj-main/src/: assembler.cpp  cmd_line_parser.cpp  emulator.cpp  emulator1.cpp  file_reader.cpp  file_writer.cpp  instruction.cpp  instruction_executor_factory.cpp  instruction_parser.cpp  linker1.cpp  place.cpp  section.cpp  section1.cpp  shared.cpp  symbol.cpp
ss-proj-main/tests/: handler.o.txt  isr_software.o.txt  isr_terminal.o.txt  isr_timer.o.txt  main.o.txt  math.o.txt  program.hex  program.hex.txt  program1.hex.txt
ss-proj-main/tests/nivo-b/: start.sh
tests/: handler.o.txt  isr_software.o.txt  isr_terminal.o.txt  isr_timer.o.txt  main.o.txt  math.o.txt  program.hex  program.hex.txt
tests/nivo-a/: math.s  start.sh
